applications/lumie/worker/grading-svc/manifests/temp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grading-svc-temp-ingress
  namespace: lumie-worker
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
    - host: lumie-edu.com
      http:
        paths:
          - path: /api/temp/grading
            pathType: Prefix
            backend:
              service:
                name: grading-svc
                port:
                  number: 8000
